plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.3.4'
}

apply plugin: 'io.spring.dependency-management'

version 'v3.00'

sourceCompatibility = 21
targetCompatibility = 21

def jacksonVersion = "2.17.2"

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes "Main-Class": "com.naeayedea.KeithLauncher"
    }
}

dependencies {
    //spring
    implementation ("org.springframework.boot:spring-boot-starter") {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }

    //replace logback with log4j2
    implementation "org.springframework.boot:spring-boot-starter-log4j2"

    //jackson
    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"

    //database
    implementation "org.mariadb.jdbc:mariadb-java-client:3.4.1"

    //discord related
    implementation "com.github.ygimenez:Pagination-Utils:4.0.6"
    implementation "net.dv8tion:JDA:5.1.1"
}

compileJava.options.encoding = 'UTF-8'

application {
    mainClassName = 'com.naeayedea.KeithLauncher'
}
